[gd_scene load_steps=2 format=3 uid="uid://deupixejnvs3l"]

[ext_resource type="Script" uid="uid://dxl25lbexu2ht" path="res://scripts/HighScores.gd" id="1_a86p6"]

[node name="HighScores" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_a86p6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HighScores" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HIGH SCORES"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SongLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Song"

[node name="SongOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Difficulty"

[node name="DifficultyOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoresVBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"
